functions for setting up CT FM

--- a/3d_seg/ct-fm.ipynb
+++ b/3d_seg/ct-fm.ipynb
@@ -55,7 +55,7 @@
     "import torch\n",
     "from lighter_zoo import SegResNet\n",
     "from monai.transforms import LoadImage\n",
-    "from ct_fm_utils import get_inferer, get_preprocess, get_postprocess\n",
+    "from setup_utils import get_inferer, get_preprocess, get_postprocess\n",
     "\n",
     "# load model\n",
     "model_name = \"project-lighter/whole_body_segmentation\"\n",
