save patches as torch.tensors

--- a/3d_seg/patching.ipynb
+++ b/3d_seg/patching.ipynb
@@ -97,8 +97,8 @@
     "\n",
     "        print(ct_patch.shape, ct_patch.min().item(), ct_patch.max().item())\n",
     "        name = f\"{root_name}_patch{c}.pt\"\n",
-    "        torch.save(ct_patch.half(), ct_cent_folder / name)\n",
-    "        torch.save(seg_patch.half(), seg_cent_folder / name)"
+    "        torch.save(torch.tensor(ct_patch).half(), ct_cent_folder / name)\n",
+    "        torch.save(torch.tensor(seg_patch).half(), seg_cent_folder / name)"
    ],
    "id": "e4ef215c9866e85",
    "outputs": [],
@@ -177,8 +177,8 @@
     "    patch_counts[root_name] = 0\n",
     "    for i in range(len(ct_patches)):\n",
     "        name = f\"{root_name}_patch{i}.pt\"\n",
-    "        torch.save(ct_patches[i].half(), ct_folder / name)\n",
-    "        torch.save(seg_patches[i].half(), seg_folder / name)\n",
+    "        torch.save(torch.tensor(ct_patches[i]).half(), ct_folder / name)\n",
+    "        torch.save(torch.tensor(seg_patches[i]).half(), seg_folder / name)\n",
     "        patch_counts[root_name] += 1"
    ],
    "id": "c3c6dcb4a2deceff",
@@ -188,14 +188,14 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "## for visualizing patches\n",
     "n = 374\n",
     "visualize_patch_seg(ct_patches[0], seg_patches[0]);"
    ],
-   "id": "a51fd0ff31638527"
+   "id": "a51fd0ff31638527",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
