update patch size to [64,128,128]

--- a/3d_seg/patching.ipynb
+++ b/3d_seg/patching.ipynb
@@ -91,11 +91,11 @@
     "        coords = np.argwhere(labels == (c + 1))\n",
     "        centroid = coords.float().mean(axis=1).to(int)\n",
     "\n",
-    "        patch_dims = [24, 128, 128]\n",
+    "        patch_dims = [64, 128, 128]\n",
     "        seg_patch = get_lesion_patch_simple(seg[0], centroid, patch_dims)\n",
     "        ct_patch = get_lesion_patch_simple(ct[0], centroid, patch_dims)\n",
     "\n",
-    "        print(ct_patch.shape, ct_patch.min().item(), ct_patch.max().item())\n",
+    "        # print(ct_patch.shape, ct_patch.min().item(), ct_patch.max().item())\n",
     "        name = f\"{root_name}_patch{c}.pt\"\n",
     "        torch.save(torch.tensor(ct_patch).half(), ct_cent_folder / name)\n",
     "        torch.save(torch.tensor(seg_patch).half(), seg_cent_folder / name)"
@@ -143,18 +143,6 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "seg_img = sitk.ReadImage(seg_path)\n",
-    "spacing = seg_img.GetSpacing()\n",
-    "seg_img.GetSize(), spacing"
-   ],
-   "id": "3eb5e11504d1b4f8",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
     "patch_counts = {}\n",
     "for ct_filename in tqdm(os.listdir(train_images)):\n",
     "    ct_path = train_images / ct_filename\n",
@@ -163,13 +151,13 @@
     "    ct = preprocess(ct_path)\n",
     "    seg = preprocess_seg(seg_path)\n",
     "\n",
-    "    patch_size = [24, 128, 128]\n",
+    "    patch_size = [64, 128, 128]\n",
     "    overlap_ratio = 0.5\n",
     "\n",
     "    all_ct_patches, _ = get_sliding_patches(ct[0], patch_size, overlap_ratio)\n",
     "    all_seg_patches, zyx_ranges = get_sliding_patches(seg[0], patch_size, overlap_ratio)\n",
     "\n",
-    "    indices = useful_patch_indices(all_seg_patches, min_voxels=10)\n",
+    "    indices = useful_patch_indices(all_seg_patches, min_voxels=30)\n",
     "    ct_patches = [p for i, p in enumerate(all_ct_patches) if i in indices]\n",
     "    seg_patches = [p for i, p in enumerate(all_seg_patches) if i in indices]\n",
     "\n",
