--- a/3d_seg/studies_ctfm_seg_mask.ipynb
+++ b/3d_seg/studies_ctfm_seg_mask.ipynb
@@ -128,10 +128,28 @@
     "    ct = sitk.GetArrayFromImage(ct_img)\n",
     "    blank_img = sitk.GetImageFromArray(ct * 0)\n",
     "\n",
+    "    blank_img.SetOrigin(ct_img.GetOrigin())\n",
+    "    blank_img.SetSpacing(ct_img.GetSpacing())\n",
+    "    blank_img.SetDirection(ct_img.GetDirection())\n",
+    "\n",
     "    sitk.WriteImage(blank_img, train_images / f.replace(\"_0000.nii.gz\", \"_0001.nii.gz\"))\n",
     "    print(f)"
    ],
    "id": "b4fc8a2e07f56842",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "ct_path = train_images / \"ULSDL3D_000358_02_01_071_lesion_01_0001.nii.gz\"\n",
+    "\n",
+    "ct_img = sitk.ReadImage(ct_path)\n",
+    "ct = sitk.GetArrayFromImage(ct_img)\n",
+    "ct.shape"
+   ],
+   "id": "7921c9ee822b9571",
    "outputs": [],
    "execution_count": null
   },
