--- a/3d_seg/studies_weak_labels.ipynb
+++ b/3d_seg/studies_weak_labels.ipynb
@@ -157,7 +157,12 @@
    "execution_count": null
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-25T11:31:50.624009Z",
+     "start_time": "2025-04-25T11:31:50.478929Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "data_folder = Path(\"/media/liushifeng/KINGSTON/nnUNet_raw/Dataset005_3dlesion_2dkeyboxes_orthogonal/\")\n",
@@ -168,7 +173,7 @@
    ],
    "id": "1ac5a12199f1b4c1",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 280
   },
   {
    "metadata": {},
@@ -385,6 +390,73 @@
    "id": "2243aa37b5a03408",
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Misc. code",
+   "id": "f57f653fa573c1d5"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-25T11:38:57.089863Z",
+     "start_time": "2025-04-25T11:38:57.046349Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# count lesions in autpet set\n",
+    "import cc3d\n",
+    "ap_names = [f for f in train_names if f.startswith(\"Aut\")]"
+   ],
+   "id": "383082ce6f97541c",
+   "outputs": [],
+   "execution_count": 287
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-25T11:39:46.533701Z",
+     "start_time": "2025-04-25T11:39:41.308017Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "counts = []\n",
+    "for ap_name in ap_names:\n",
+    "    seg_img = sitk.ReadImage(train_labels / ap_name.replace(\"_0000.nii.gz\", \".nii.gz\"))\n",
+    "    seg = sitk.GetArrayFromImage(seg_img)\n",
+    "    _, n = cc3d.connected_components(seg, return_N=True)\n",
+    "    counts.append(n)"
+   ],
+   "id": "49b59c50c4bd5646",
+   "outputs": [],
+   "execution_count": 291
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-25T11:39:55.952412Z",
+     "start_time": "2025-04-25T11:39:55.935998Z"
+    }
+   },
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.8974358974358974"
+      ]
+     },
+     "execution_count": 294,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 294,
+   "source": "sum(counts) / len(counts)",
+   "id": "c9bf85e63e897281"
   }
  ],
  "metadata": {
