update visualize code

--- a/3d_seg/visual.ipynb
+++ b/3d_seg/visual.ipynb
@@ -23,6 +23,10 @@
    "source": [
     "import os\n",
     "from pathlib import Path\n",
+    "from visualize import load_and_plot\n",
+    "import matplotlib.pyplot as plt\n",
+    "from tqdm import tqdm\n",
+    "\n",
     "\n",
     "res_folder = Path(\"/media/liushifeng/KINGSTON/nnUNet_results/\")\n",
     "val_folder = Path(\"/media/liushifeng/KINGSTON/nnUNet_results/Dataset002_3dlesion_ctfm_seg/nnUNetTrainer__nnUNetPlans__3d_fullres/fold_0/validation/\")\n",
@@ -42,22 +46,21 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "# get a filename from ULS validation images\n",
-    "f = uls_val_names[3]\n",
-    "name = f.replace(\"_0000.nii.gz\", \".nii.gz\")"
+    "for name in tqdm(uls_val_names[92:]):\n",
+    "    fig = load_and_plot(name, images_folder, labels_folder, res_folder)\n",
+    "    fig.savefig(f'/media/liushifeng/KINGSTON/3d_val_visualization/fold_0/{name}.jpg', bbox_inches='tight', dpi=240)\n",
+    "    print(\"saved output for:\", name)\n",
+    "    plt.close()"
    ],
-   "id": "99876cd725795c26",
+   "id": "eac3d5580b340aa6",
    "outputs": [],
    "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "source": [
-    "from visualize import load_and_plot\n",
-    "load_and_plot(name, images_folder, labels_folder, res_folder)"
-   ],
-   "id": "eac3d5580b340aa6",
+   "source": "",
+   "id": "4c59d67f528a22bf",
    "outputs": [],
    "execution_count": null
   }
