add metrics plot code

--- a/3d_seg/metrics.ipynb
+++ b/3d_seg/metrics.ipynb
@@ -176,6 +176,132 @@
    "id": "101050ed5fdec208",
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Metrics aggregation &  visualization",
+   "id": "fa377e9a442205b"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "import pandas as pd\n",
+    "import seaborn as sns"
+   ],
+   "id": "887137dc60e851f9",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "dice = {\n",
+    "\"ct\": 0.2609,\n",
+    "\"ct+seg\": 0.3806,\n",
+    "\"ct+seg+box\": 0.5843,\n",
+    "\"ct+seg+2box\": 0.7687,\n",
+    "\"ct+seg+mask\": 0.6108,\n",
+    "\"ct+seg+2mask\": 0.8123\n",
+    "}\n",
+    "df_dice = pd.DataFrame(dice, index=[0]).T\n",
+    "df_dice.columns = [\"dice\"]\n",
+    "df_dice.reset_index(names=\"dataset_name\", inplace=True)"
+   ],
+   "id": "d2de56bd1b722c52",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "df_dice['metric'] = \"dice\"\n",
+    "df_dice['value'] = df_dice['dice']\n",
+    "g = sns.catplot(\n",
+    "    data=df_dice,\n",
+    "    y=\"dataset_name\",\n",
+    "    x=\"value\",\n",
+    "    col=\"metric\",\n",
+    "    hue=\"dataset_name\",\n",
+    "    errorbar=None,\n",
+    "    kind=\"bar\",\n",
+    "    height=3,\n",
+    "    aspect=1.25,\n",
+    "    width=0.5,\n",
+    "    sharex=False,\n",
+    "    palette=\"deep\",\n",
+    ")\n",
+    "g.set_axis_labels(\"\", \"inputs\")\n",
+    "g.set_titles(\"metric=dice\")\n",
+    "g.savefig(\"metrics/dice_plot.png\")"
+   ],
+   "id": "fb78978b10ac2486",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# df = pd.read_csv(\"metrics/fold_0_metrics_voxel.csv\")\n",
+    "df = pd.read_csv(\"metrics/fold_0_metrics_lesion.csv\")"
+   ],
+   "id": "44f1ea09e6204d41",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "(df.groupby(\"dataset_name\")['abs_perc_vol_error'].mean() * 100).round(2)",
+   "id": "d5f5564f6649bbc",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "df['abs_perc_vol_error'] = (df['pred_volume'] - df['volume']).abs() / df['volume']\n",
+    "df = df.rename(columns={\"p\": \"precision\", \"r\": \"recall\"})\n",
+    "df_v = df.melt(id_vars=['lesion_name', 'dataset_name'],\n",
+    "        value_vars=['precision', 'recall', 'abs_perc_vol_error'],\n",
+    "        var_name='metric', value_name='value')"
+   ],
+   "id": "be5e6b40bd968619",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "g = sns.catplot(\n",
+    "    data=df_v,\n",
+    "    y=\"dataset_name\",\n",
+    "    x=\"value\",\n",
+    "    col=\"metric\",\n",
+    "    hue=\"dataset_name\",\n",
+    "    errorbar=None,\n",
+    "    kind=\"bar\",\n",
+    "    height=3,\n",
+    "    aspect=1.25,\n",
+    "    width=0.5,\n",
+    "    sharex=False,\n",
+    "    palette=\"deep\",\n",
+    ")\n",
+    "# g.set_xticklabels(rotation=20)\n",
+    "# g.axes[0][0].set(ylim=(-0.1, 1.1));\n",
+    "g.set_axis_labels(\"\", \"inputs\");\n",
+    "# g.set(ylim=(-0.1, 1.1))\n",
+    "g.savefig(\"metrics/lesion_precision_recall_vol_plot.png\")"
+   ],
+   "id": "baf8f198cd803dff",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
